y.output
Terminals which are not used

   '%'
   '~'
   '.'
   TOKEN_ERROR
   ELSE
   LOWER_THAN_ELSE


State 121 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: lista_declaracoes

    2 lista_declaracoes: declaracao
    3                  | lista_declaracoes declaracao

    4 declaracao: declaracao_variavel ';'
    5           | declaracao_vetor ';'
    6           | declaracao_funcao

    7 declaracao_variavel: tipo TK_IDENTIFIER ':' valor_inicial

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER '[' LIT_INT ']'

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' lista_parametros ')' bloco

   11 lista_parametros: /* empty */
   12                 | parametro ',' lista_parametros
   13                 | parametro

   14 parametro: tipo TK_IDENTIFIER

   15 tipo: KW_CHAR
   16     | KW_INT
   17     | KW_FLOAT
   18     | KW_BOOL

   19 valor_inicial: LIT_INT
   20              | LIT_CHAR
   21              | LIT_REAL
   22              | LIT_FALSE
   23              | LIT_TRUE
   24              | LIT_STRING

   25 valores_iniciais: valor_inicial
   26                 | valores_iniciais valor_inicial

   27 bloco: '{' lista_comandos '}'

   28 lista_comandos: /* empty */
   29               | lista_comandos comando

   30 comando: atribuicao
   31        | controle_fluxo
   32        | KW_READ tipo TK_IDENTIFIER ';'
   33        | KW_PRINT tipo expressao ';'
   34        | KW_PRINT LIT_STRING ';'
   35        | KW_RETURN expressao ';'
   36        | bloco
   37        | ';'

   38 atribuicao: TK_IDENTIFIER '=' expressao ';'
   39           | vetor '=' expressao ';'

   40 vetor: TK_IDENTIFIER '[' LIT_INT ']'
   41      | TK_IDENTIFIER '[' TK_IDENTIFIER ']'

   42 controle_fluxo: KW_IF '(' expressao ')' comando
   43               | KW_IF '(' expressao ')' comando KW_ELSE comando
   44               | KW_WHILE '(' expressao ')' comando

   45 expressao: expressao '+' expressao
   46          | expressao '-' expressao
   47          | expressao '*' expressao
   48          | expressao '/' expressao
   49          | expressao '<' expressao
   50          | expressao '>' expressao
   51          | expressao '|' expressao
   52          | expressao '&' expressao
   53          | expressao OPERATOR_LE expressao
   54          | expressao OPERATOR_GE expressao
   55          | expressao OPERATOR_EQ expressao
   56          | expressao OPERATOR_DIF expressao
   57          | '(' expressao ')'
   58          | TK_IDENTIFIER
   59          | vetor
   60          | LIT_INT
   61          | LIT_CHAR
   62          | LIT_REAL
   63          | LIT_FALSE
   64          | LIT_TRUE
   65          | chamada_funcao

   66 chamada_funcao: TK_IDENTIFIER '(' lista_chamada ')'

   67 lista_chamada: /* empty */
   68              | expressao ',' lista_chamada
   69              | expressao


Terminals, with rules where they appear

$end (0) 0
'%' (37)
'&' (38) 52
'(' (40) 10 42 43 44 57 66
')' (41) 10 42 43 44 57 66
'*' (42) 47
'+' (43) 45
',' (44) 12 68
'-' (45) 46
'.' (46)
'/' (47) 48
':' (58) 7 8
';' (59) 4 5 32 33 34 35 37 38 39
'<' (60) 49
'=' (61) 38 39
'>' (62) 50
'[' (91) 8 9 40 41
']' (93) 8 9 40 41
'{' (123) 27
'|' (124) 51
'}' (125) 27
'~' (126)
error (256)
KW_CHAR (258) 15
KW_INT (259) 16
KW_FLOAT (260) 17
KW_BOOL (261) 18
KW_IF (262) 42 43
KW_ELSE (263) 43
KW_WHILE (264) 44
KW_READ (265) 32
KW_PRINT (266) 33 34
KW_RETURN (267) 35
OPERATOR_LE (268) 53
OPERATOR_GE (269) 54
OPERATOR_EQ (270) 55
OPERATOR_DIF (271) 56
TK_IDENTIFIER (272) 7 8 9 10 14 32 38 40 41 58 66
LIT_INT (273) 8 9 19 40 60
LIT_CHAR (274) 20 61
LIT_REAL (275) 21 62
LIT_FALSE (276) 22 63
LIT_TRUE (277) 23 64
LIT_STRING (278) 24 34
TOKEN_ERROR (279)
ELSE (280)
LOWER_THAN_ELSE (281)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
programa (49)
    on left: 1, on right: 0
lista_declaracoes (50)
    on left: 2 3, on right: 1 3
declaracao (51)
    on left: 4 5 6, on right: 2 3
declaracao_variavel (52)
    on left: 7, on right: 4
declaracao_vetor (53)
    on left: 8 9, on right: 5
declaracao_funcao (54)
    on left: 10, on right: 6
lista_parametros (55)
    on left: 11 12 13, on right: 10 12
parametro (56)
    on left: 14, on right: 12 13
tipo (57)
    on left: 15 16 17 18, on right: 7 8 9 10 14 32 33
valor_inicial (58)
    on left: 19 20 21 22 23 24, on right: 7 25 26
valores_iniciais (59)
    on left: 25 26, on right: 8 26
bloco (60)
    on left: 27, on right: 10 36
lista_comandos (61)
    on left: 28 29, on right: 27 29
comando (62)
    on left: 30 31 32 33 34 35 36 37, on right: 29 42 43 44
atribuicao (63)
    on left: 38 39, on right: 30
vetor (64)
    on left: 40 41, on right: 39 59
controle_fluxo (65)
    on left: 42 43 44, on right: 31
expressao (66)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65, on right: 33 35 38 39 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 68 69
chamada_funcao (67)
    on left: 66, on right: 65
lista_chamada (68)
    on left: 67 68 69, on right: 66 68


state 0

    0 $accept: . programa $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4

    programa             go to state 5
    lista_declaracoes    go to state 6
    declaracao           go to state 7
    declaracao_variavel  go to state 8
    declaracao_vetor     go to state 9
    declaracao_funcao    go to state 10
    tipo                 go to state 11


state 1

   15 tipo: KW_CHAR .

    $default  reduce using rule 15 (tipo)


state 2

   16 tipo: KW_INT .

    $default  reduce using rule 16 (tipo)


state 3

   17 tipo: KW_FLOAT .

    $default  reduce using rule 17 (tipo)


state 4

   18 tipo: KW_BOOL .

    $default  reduce using rule 18 (tipo)


state 5

    0 $accept: programa . $end

    $end  shift, and go to state 12


state 6

    1 programa: lista_declaracoes .
    3 lista_declaracoes: lista_declaracoes . declaracao

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4

    $default  reduce using rule 1 (programa)

    declaracao           go to state 13
    declaracao_variavel  go to state 8
    declaracao_vetor     go to state 9
    declaracao_funcao    go to state 10
    tipo                 go to state 11


state 7

    2 lista_declaracoes: declaracao .

    $default  reduce using rule 2 (lista_declaracoes)


state 8

    4 declaracao: declaracao_variavel . ';'

    ';'  shift, and go to state 14


state 9

    5 declaracao: declaracao_vetor . ';'

    ';'  shift, and go to state 15


state 10

    6 declaracao: declaracao_funcao .

    $default  reduce using rule 6 (declaracao)


state 11

    7 declaracao_variavel: tipo . TK_IDENTIFIER ':' valor_inicial
    8 declaracao_vetor: tipo . TK_IDENTIFIER '[' LIT_INT ']' ':' valores_iniciais
    9                 | tipo . TK_IDENTIFIER '[' LIT_INT ']'
   10 declaracao_funcao: tipo . TK_IDENTIFIER '(' lista_parametros ')' bloco

    TK_IDENTIFIER  shift, and go to state 16


state 12

    0 $accept: programa $end .

    $default  accept


state 13

    3 lista_declaracoes: lista_declaracoes declaracao .

    $default  reduce using rule 3 (lista_declaracoes)


state 14

    4 declaracao: declaracao_variavel ';' .

    $default  reduce using rule 4 (declaracao)


state 15

    5 declaracao: declaracao_vetor ';' .

    $default  reduce using rule 5 (declaracao)


state 16

    7 declaracao_variavel: tipo TK_IDENTIFIER . ':' valor_inicial
    8 declaracao_vetor: tipo TK_IDENTIFIER . '[' LIT_INT ']' ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER . '[' LIT_INT ']'
   10 declaracao_funcao: tipo TK_IDENTIFIER . '(' lista_parametros ')' bloco

    ':'  shift, and go to state 17
    '('  shift, and go to state 18
    '['  shift, and go to state 19


state 17

    7 declaracao_variavel: tipo TK_IDENTIFIER ':' . valor_inicial

    LIT_INT     shift, and go to state 20
    LIT_CHAR    shift, and go to state 21
    LIT_REAL    shift, and go to state 22
    LIT_FALSE   shift, and go to state 23
    LIT_TRUE    shift, and go to state 24
    LIT_STRING  shift, and go to state 25

    valor_inicial  go to state 26


state 18

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' . lista_parametros ')' bloco

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4

    $default  reduce using rule 11 (lista_parametros)

    lista_parametros  go to state 27
    parametro         go to state 28
    tipo              go to state 29


state 19

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' . LIT_INT ']' ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER '[' . LIT_INT ']'

    LIT_INT  shift, and go to state 30


state 20

   19 valor_inicial: LIT_INT .

    $default  reduce using rule 19 (valor_inicial)


state 21

   20 valor_inicial: LIT_CHAR .

    $default  reduce using rule 20 (valor_inicial)


state 22

   21 valor_inicial: LIT_REAL .

    $default  reduce using rule 21 (valor_inicial)


state 23

   22 valor_inicial: LIT_FALSE .

    $default  reduce using rule 22 (valor_inicial)


state 24

   23 valor_inicial: LIT_TRUE .

    $default  reduce using rule 23 (valor_inicial)


state 25

   24 valor_inicial: LIT_STRING .

    $default  reduce using rule 24 (valor_inicial)


state 26

    7 declaracao_variavel: tipo TK_IDENTIFIER ':' valor_inicial .

    $default  reduce using rule 7 (declaracao_variavel)


state 27

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' lista_parametros . ')' bloco

    ')'  shift, and go to state 31


state 28

   12 lista_parametros: parametro . ',' lista_parametros
   13                 | parametro .

    ','  shift, and go to state 32

    $default  reduce using rule 13 (lista_parametros)


state 29

   14 parametro: tipo . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 33


state 30

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT . ']' ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER '[' LIT_INT . ']'

    ']'  shift, and go to state 34


state 31

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' lista_parametros ')' . bloco

    '{'  shift, and go to state 35

    bloco  go to state 36


state 32

   12 lista_parametros: parametro ',' . lista_parametros

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4

    $default  reduce using rule 11 (lista_parametros)

    lista_parametros  go to state 37
    parametro         go to state 28
    tipo              go to state 29


state 33

   14 parametro: tipo TK_IDENTIFIER .

    $default  reduce using rule 14 (parametro)


state 34

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' . ':' valores_iniciais
    9                 | tipo TK_IDENTIFIER '[' LIT_INT ']' .

    ':'  shift, and go to state 38

    $default  reduce using rule 9 (declaracao_vetor)


state 35

   27 bloco: '{' . lista_comandos '}'

    $default  reduce using rule 28 (lista_comandos)

    lista_comandos  go to state 39


state 36

   10 declaracao_funcao: tipo TK_IDENTIFIER '(' lista_parametros ')' bloco .

    $default  reduce using rule 10 (declaracao_funcao)


state 37

   12 lista_parametros: parametro ',' lista_parametros .

    $default  reduce using rule 12 (lista_parametros)


state 38

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' ':' . valores_iniciais

    LIT_INT     shift, and go to state 20
    LIT_CHAR    shift, and go to state 21
    LIT_REAL    shift, and go to state 22
    LIT_FALSE   shift, and go to state 23
    LIT_TRUE    shift, and go to state 24
    LIT_STRING  shift, and go to state 25

    valor_inicial     go to state 40
    valores_iniciais  go to state 41


state 39

   27 bloco: '{' lista_comandos . '}'
   29 lista_comandos: lista_comandos . comando

    KW_IF          shift, and go to state 42
    KW_WHILE       shift, and go to state 43
    KW_READ        shift, and go to state 44
    KW_PRINT       shift, and go to state 45
    KW_RETURN      shift, and go to state 46
    ';'            shift, and go to state 47
    '{'            shift, and go to state 35
    '}'            shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49

    bloco           go to state 50
    comando         go to state 51
    atribuicao      go to state 52
    vetor           go to state 53
    controle_fluxo  go to state 54


state 40

   25 valores_iniciais: valor_inicial .

    $default  reduce using rule 25 (valores_iniciais)


state 41

    8 declaracao_vetor: tipo TK_IDENTIFIER '[' LIT_INT ']' ':' valores_iniciais .
   26 valores_iniciais: valores_iniciais . valor_inicial

    LIT_INT     shift, and go to state 20
    LIT_CHAR    shift, and go to state 21
    LIT_REAL    shift, and go to state 22
    LIT_FALSE   shift, and go to state 23
    LIT_TRUE    shift, and go to state 24
    LIT_STRING  shift, and go to state 25

    $default  reduce using rule 8 (declaracao_vetor)

    valor_inicial  go to state 55


state 42

   42 controle_fluxo: KW_IF . '(' expressao ')' comando
   43               | KW_IF . '(' expressao ')' comando KW_ELSE comando

    '('  shift, and go to state 56


state 43

   44 controle_fluxo: KW_WHILE . '(' expressao ')' comando

    '('  shift, and go to state 57


state 44

   32 comando: KW_READ . tipo TK_IDENTIFIER ';'

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_BOOL   shift, and go to state 4

    tipo  go to state 58


state 45

   33 comando: KW_PRINT . tipo expressao ';'
   34        | KW_PRINT . LIT_STRING ';'

    KW_CHAR     shift, and go to state 1
    KW_INT      shift, and go to state 2
    KW_FLOAT    shift, and go to state 3
    KW_BOOL     shift, and go to state 4
    LIT_STRING  shift, and go to state 59

    tipo  go to state 60


state 46

   35 comando: KW_RETURN . expressao ';'

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 69
    chamada_funcao  go to state 70


state 47

   37 comando: ';' .

    $default  reduce using rule 37 (comando)


state 48

   27 bloco: '{' lista_comandos '}' .

    $default  reduce using rule 27 (bloco)


state 49

   38 atribuicao: TK_IDENTIFIER . '=' expressao ';'
   40 vetor: TK_IDENTIFIER . '[' LIT_INT ']'
   41      | TK_IDENTIFIER . '[' TK_IDENTIFIER ']'

    '['  shift, and go to state 71
    '='  shift, and go to state 72


state 50

   36 comando: bloco .

    $default  reduce using rule 36 (comando)


state 51

   29 lista_comandos: lista_comandos comando .

    $default  reduce using rule 29 (lista_comandos)


state 52

   30 comando: atribuicao .

    $default  reduce using rule 30 (comando)


state 53

   39 atribuicao: vetor . '=' expressao ';'

    '='  shift, and go to state 73


state 54

   31 comando: controle_fluxo .

    $default  reduce using rule 31 (comando)


state 55

   26 valores_iniciais: valores_iniciais valor_inicial .

    $default  reduce using rule 26 (valores_iniciais)


state 56

   42 controle_fluxo: KW_IF '(' . expressao ')' comando
   43               | KW_IF '(' . expressao ')' comando KW_ELSE comando

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 74
    chamada_funcao  go to state 70


state 57

   44 controle_fluxo: KW_WHILE '(' . expressao ')' comando

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 75
    chamada_funcao  go to state 70


state 58

   32 comando: KW_READ tipo . TK_IDENTIFIER ';'

    TK_IDENTIFIER  shift, and go to state 76


state 59

   34 comando: KW_PRINT LIT_STRING . ';'

    ';'  shift, and go to state 77


state 60

   33 comando: KW_PRINT tipo . expressao ';'

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 78
    chamada_funcao  go to state 70


state 61

   57 expressao: '(' . expressao ')'

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 79
    chamada_funcao  go to state 70


state 62

   40 vetor: TK_IDENTIFIER . '[' LIT_INT ']'
   41      | TK_IDENTIFIER . '[' TK_IDENTIFIER ']'
   58 expressao: TK_IDENTIFIER .
   66 chamada_funcao: TK_IDENTIFIER . '(' lista_chamada ')'

    '('  shift, and go to state 80
    '['  shift, and go to state 71

    $default  reduce using rule 58 (expressao)


state 63

   60 expressao: LIT_INT .

    $default  reduce using rule 60 (expressao)


state 64

   61 expressao: LIT_CHAR .

    $default  reduce using rule 61 (expressao)


state 65

   62 expressao: LIT_REAL .

    $default  reduce using rule 62 (expressao)


state 66

   63 expressao: LIT_FALSE .

    $default  reduce using rule 63 (expressao)


state 67

   64 expressao: LIT_TRUE .

    $default  reduce using rule 64 (expressao)


state 68

   59 expressao: vetor .

    $default  reduce using rule 59 (expressao)


state 69

   35 comando: KW_RETURN expressao . ';'
   45 expressao: expressao . '+' expressao
   46          | expressao . '-' expressao
   47          | expressao . '*' expressao
   48          | expressao . '/' expressao
   49          | expressao . '<' expressao
   50          | expressao . '>' expressao
   51          | expressao . '|' expressao
   52          | expressao . '&' expressao
   53          | expressao . OPERATOR_LE expressao
   54          | expressao . OPERATOR_GE expressao
   55          | expressao . OPERATOR_EQ expressao
   56          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_DIF  shift, and go to state 84
    ';'           shift, and go to state 85
    '+'           shift, and go to state 86
    '-'           shift, and go to state 87
    '*'           shift, and go to state 88
    '/'           shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '&'           shift, and go to state 92
    '|'           shift, and go to state 93


state 70

   65 expressao: chamada_funcao .

    $default  reduce using rule 65 (expressao)


state 71

   40 vetor: TK_IDENTIFIER '[' . LIT_INT ']'
   41      | TK_IDENTIFIER '[' . TK_IDENTIFIER ']'

    TK_IDENTIFIER  shift, and go to state 94
    LIT_INT        shift, and go to state 95


state 72

   38 atribuicao: TK_IDENTIFIER '=' . expressao ';'

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 96
    chamada_funcao  go to state 70


state 73

   39 atribuicao: vetor '=' . expressao ';'

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 97
    chamada_funcao  go to state 70


state 74

   42 controle_fluxo: KW_IF '(' expressao . ')' comando
   43               | KW_IF '(' expressao . ')' comando KW_ELSE comando
   45 expressao: expressao . '+' expressao
   46          | expressao . '-' expressao
   47          | expressao . '*' expressao
   48          | expressao . '/' expressao
   49          | expressao . '<' expressao
   50          | expressao . '>' expressao
   51          | expressao . '|' expressao
   52          | expressao . '&' expressao
   53          | expressao . OPERATOR_LE expressao
   54          | expressao . OPERATOR_GE expressao
   55          | expressao . OPERATOR_EQ expressao
   56          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_DIF  shift, and go to state 84
    ')'           shift, and go to state 98
    '+'           shift, and go to state 86
    '-'           shift, and go to state 87
    '*'           shift, and go to state 88
    '/'           shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '&'           shift, and go to state 92
    '|'           shift, and go to state 93


state 75

   44 controle_fluxo: KW_WHILE '(' expressao . ')' comando
   45 expressao: expressao . '+' expressao
   46          | expressao . '-' expressao
   47          | expressao . '*' expressao
   48          | expressao . '/' expressao
   49          | expressao . '<' expressao
   50          | expressao . '>' expressao
   51          | expressao . '|' expressao
   52          | expressao . '&' expressao
   53          | expressao . OPERATOR_LE expressao
   54          | expressao . OPERATOR_GE expressao
   55          | expressao . OPERATOR_EQ expressao
   56          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_DIF  shift, and go to state 84
    ')'           shift, and go to state 99
    '+'           shift, and go to state 86
    '-'           shift, and go to state 87
    '*'           shift, and go to state 88
    '/'           shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '&'           shift, and go to state 92
    '|'           shift, and go to state 93


state 76

   32 comando: KW_READ tipo TK_IDENTIFIER . ';'

    ';'  shift, and go to state 100


state 77

   34 comando: KW_PRINT LIT_STRING ';' .

    $default  reduce using rule 34 (comando)


state 78

   33 comando: KW_PRINT tipo expressao . ';'
   45 expressao: expressao . '+' expressao
   46          | expressao . '-' expressao
   47          | expressao . '*' expressao
   48          | expressao . '/' expressao
   49          | expressao . '<' expressao
   50          | expressao . '>' expressao
   51          | expressao . '|' expressao
   52          | expressao . '&' expressao
   53          | expressao . OPERATOR_LE expressao
   54          | expressao . OPERATOR_GE expressao
   55          | expressao . OPERATOR_EQ expressao
   56          | expressao . OPERATOR_DIF expressao

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_DIF  shift, and go to state 84
    ';'           shift, and go to state 101
    '+'           shift, and go to state 86
    '-'           shift, and go to state 87
    '*'           shift, and go to state 88
    '/'           shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '&'           shift, and go to state 92
    '|'           shift, and go to state 93


state 79

   45 expressao: expressao . '+' expressao
   46          | expressao . '-' expressao
   47          | expressao . '*' expressao
   48          | expressao . '/' expressao
   49          | expressao . '<' expressao
   50          | expressao . '>' expressao
   51          | expressao . '|' expressao
   52          | expressao . '&' expressao
   53          | expressao . OPERATOR_LE expressao
   54          | expressao . OPERATOR_GE expressao
   55          | expressao . OPERATOR_EQ expressao
   56          | expressao . OPERATOR_DIF expressao
   57          | '(' expressao . ')'

    OPERATOR_LE   shift, and go to state 81
    OPERATOR_GE   shift, and go to state 82
    OPERATOR_EQ   shift, and go to state 83
    OPERATOR_DIF  shift, and go to state 84
    ')'           shift, and go to state 102
    '+'           shift, and go to state 86
    '-'           shift, and go to state 87
    '*'           shift, and go to state 88
    '/'           shift, and go to state 89
    '<'           shift, and go to state 90
    '>'           shift, and go to state 91
    '&'           shift, and go to state 92
    '|'           shift, and go to state 93


state 80

   66 chamada_funcao: TK_IDENTIFIER '(' . lista_chamada ')'

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    $default  reduce using rule 67 (lista_chamada)

    vetor           go to state 68
    expressao       go to state 103
    chamada_funcao  go to state 70
    lista_chamada   go to state 104


state 81

   53 expressao: expressao OPERATOR_LE . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 105
    chamada_funcao  go to state 70


state 82

   54 expressao: expressao OPERATOR_GE . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 106
    chamada_funcao  go to state 70


state 83

   55 expressao: expressao OPERATOR_EQ . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 107
    chamada_funcao  go to state 70


state 84

   56 expressao: expressao OPERATOR_DIF . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 108
    chamada_funcao  go to state 70


state 85

   35 comando: KW_RETURN expressao ';' .

    $default  reduce using rule 35 (comando)


state 86

   45 expressao: expressao '+' . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 109
    chamada_funcao  go to state 70


state 87

   46 expressao: expressao '-' . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 110
    chamada_funcao  go to state 70


state 88

   47 expressao: expressao '*' . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 111
    chamada_funcao  go to state 70


state 89

   48 expressao: expressao '/' . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 112
    chamada_funcao  go to state 70


state 90

   49 expressao: expressao '<' . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 113
    chamada_funcao  go to state 70


state 91

   50 expressao: expressao '>' . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 114
    chamada_funcao  go to state 70


state 92

   52 expressao: expressao '&' . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 115
    chamada_funcao  go to state 70


state 93

   51 expressao: expressao '|' . expressao

    '('            shift, and go to state 61
    TK_IDENTIFIER  shift, and go to state 62
    LIT_INT        shift, and go to state 63
    LIT_CHAR       shift, and go to state 64
    LIT_REAL       shift, and go to state 65
    LIT_FALSE      shift, and go to state 66
    LIT_TRUE       shift, and go to state 67

    vetor           go to state 68
    expressao       go to state 116
    chamada_funcao  go to state 70


state 94

   41 vetor: TK_IDENTIFIER '[' TK_IDENTIFIER . ']'

    ']'  shift, and go to state 117


state 95

   40 vetor: TK_IDENTIFIER '[' LIT_INT . ']'

    ']'  shift, and go to state 118


state 96

   38 atribuicao: TK_IDENTIFIER '=' expressao . ';'
   45 expressao: expressao . '+' expressao
   46          | expressao . '-' expressao
   47          | expressao . '*' expressao
   48          | expressao . '/' expressao
   49          | expressao . '<' expressao
   50          | expressao . '>' expressao
   51          | expressao . '|' expressao
   52          | expressao . '&' expressao
   53          | expressao . OPERATOR_LE expressao
   54          | expressao . OPERATOR_GE expressao
   55          | expressao . OPERATOR_EQ expressao
   56          | expressao . OPERATOR_DIF expressao
